FC-297 fix: adaptive PaginationWithSelect on mobile

--- a/src/components/ui/Pagination/paginationWithSelect.module.scss
+++ b/src/components/ui/Pagination/paginationWithSelect.module.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   flex-wrap: wrap;
   row-gap: 10px;
+  column-gap: 24px;
 }
 
 .boxItem {
