--- a/src/components/ui/Pagination/ui/pagination.module.scss
+++ b/src/components/ui/Pagination/ui/pagination.module.scss
@@ -2,7 +2,6 @@
   overflow: visible;
   display: flex;
   align-items: center;
-  margin-right: 24px;
 }
 
 .pageLinkWrapper:not(:last-child) {
